[gd_scene load_steps=6 format=3 uid="uid://dorta1wgomica"]

[ext_resource type="Script" path="res://scripts/sound_manager.gd" id="1_6wc0h"]
[ext_resource type="AudioStream" uid="uid://cfuf36yby8375" path="res://assets/kenney_ui-audio/switch24.ogg" id="6_5fmj3"]
[ext_resource type="AudioStream" uid="uid://cll5vccwfq2vo" path="res://assets/bgm/Sakarin villapaita.mp3" id="7_uttcu"]
[ext_resource type="AudioStream" uid="uid://b48ndi8fvmatj" path="res://assets/bgm/Molkky.wav" id="8_fb67g"]
[ext_resource type="AudioStream" uid="uid://d3ttemb62vhn4" path="res://assets/audio_pools/sakarin_puheet.tres" id="9_85kwh"]

[node name="SoundManager" type="Node"]
script = ExtResource("1_6wc0h")

[node name="SfxMolkynPuhe" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_85kwh")

[node name="SfxValikkoValinta" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5fmj3")

[node name="BgmMolkky" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fb67g")

[node name="BgmSakari" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uttcu")
